# wxbackup

./: .gitignore  README.md  build.sh  clean.sh  install.sh  push.sh  settings.gradle.kts  test_chunked.cpp  test_streaming  test_streaming.cpp  test_tar_zstd.c
.github/workflows/: build.yml
.hermes/plans/: 2026-07-13_210851-wxhook-refactor.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  wxarchive.cpp
app/src/main/java/com/nous/wxhook/: App.kt  MainActivity.kt
app/src/main/java/com/nous/wxhook/backup/: ArchiveService.kt  BackupEnv.kt  BackupManifest.kt  BackupOrchestrator.kt  FileManifest.kt  FullBackupLayout.kt  NativeArchive.kt  NativeArchivePlan.kt  NativePackager.kt  SdcardOps.kt  TargetAppController.kt  WeChatSourceResolver.kt
app/src/main/java/com/nous/wxhook/core/command/: CommandResult.kt  ShellEscaper.kt
app/src/main/java/com/nous/wxhook/database/: SqlCipherExecutor.kt
app/src/main/java/com/nous/wxhook/db/: BackupManager.kt  DbCleanup.kt  MergeEngine.kt  WeChatDbDecryptor.kt  WxHookProvider.kt
app/src/main/java/com/nous/wxhook/receiver/: KeyReceiver.kt  RebuildReceiver.kt  ScheduleReceiver.kt
app/src/main/java/com/nous/wxhook/root/: RootGateway.kt  RootGatewayImpl.kt  RootGateways.kt
app/src/main/java/com/nous/wxhook/root/libsu/: RootManager.kt  WxRootBinder.kt  WxRootService.kt
app/src/main/java/com/nous/wxhook/rootbridge/: RootCommandRunner.kt
app/src/main/java/com/nous/wxhook/rootbridge/backup/: BackupHookLocal.kt
app/src/main/java/com/nous/wxhook/service/: BackupPackage.kt  BackupService.kt  DecryptService.kt  SyncService.kt
app/src/main/java/com/nous/wxhook/storage/: StorageCapability.kt  WxHookPaths.kt
app/src/main/java/com/nous/wxhook/sync/: CloudClient.kt  OpenListCloudClient.kt  RcloneClient.kt  Syncer.kt  WebDavClient.kt
app/src/main/java/com/nous/wxhook/ui/: M3Components.kt
app/src/main/java/com/nous/wxhook/ui/backup/: BackupActivity.kt
app/src/main/java/com/nous/wxhook/ui/chatdetail/: ChatDetailActivity.kt
app/src/main/java/com/nous/wxhook/ui/chatlist/: ChatListActivity.kt
app/src/main/java/com/nous/wxhook/ui/cloud/: CloudConfigActivity.kt  CloudConfigViewModel.kt
app/src/main/java/com/nous/wxhook/util/: SetupManager.kt
app/src/main/java/com/nous/wxhook/worker/: TaskState.kt
app/src/main/java/com/openlist/bridge/: OpenListDriver.kt
app/src/main/java/openlistbridge/: Openlistbridge.kt
app/src/main/jni/: CMakeLists.txt  native_packager.c
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/nous/wxhook/backup/: FullBackupLayoutTest.kt  NativeArchivePlanTest.kt
docs/: README.md  architecture.md  backup-restore.md  development.md  setup.md
scripts/: install-nightly-release.sh  setup-signing.sh
xposed/: build.gradle.kts
xposed/src/main/java/com/nous/wxhook/xposed/: WeChatHookEntry.kt
(+8 files in other folders)
